# quadcopter

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  window.cpp
src/shaders/: main.frag  main.vert
